--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -65,7 +65,7 @@
   <div class="col-md-6 col-md-offset-3">     
     <div class="row">
     <div id="logo" class="text-center">
-      <h1>This is Logo</h1><p>Slogan of thematic</p>
+      <h1>Survivor Support</h1><p>Helping you find the support you need</p>
     </div>
     <form role="form" id="form-buscar">
     <div class="form-group">
