--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,28 +30,28 @@
     }
 
 
-    #form-buscar >.form-group >.input-group > .form-control {
+    #search >.form-group >.input-group > .form-control {
         height: 40px;
     }
-    #form-buscar >.form-group >.input-group > .input-group-btn > .btn{
+    #search >.form-group >.input-group > .input-group-btn > .btn{
             height: 40px; 
             font-size: 16px;
             font-weight: 300; 
              
            
     }
-    #form-buscar >.form-group >.input-group > .input-group-btn > .btn .glyphicon{
+    #search >.form-group >.input-group > .input-group-btn > .btn .glyphicon{
      margin-right:12px;   
     }    
 
 
-    #form-buscar >.form-group >.input-group > .form-control {
+    #search >.form-group >.input-group > .form-control {
         font-size: 16px;
         font-weight: 300;
        
     }
 
-    #form-buscar >.form-group >.input-group > .form-control:focus {
+    #search >.form-group >.input-group > .form-control:focus {
       border-color: #33A444;
       outline: 0;
       -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 1px rgba(0, 109, 0, 0.8);
@@ -67,7 +67,7 @@
     <div id="logo" class="text-center">
       <h1>Survivor Support</h1><p>Helping you find the support you need</p>
     </div>
-    <form role="form" id="form-buscar">
+    <form role="form" id="search" action="{{ url_for('search') }}" method=post role="search">
     <div class="form-group">
     <div class="input-group">
     <input id="1" class="form-control" type="text" name="search" placeholder="Search..." required/>
